# horario

./: Cargo.toml  README.md  app.exe.manifest  app.rc  build.rs
src/: horario.rs  main.rs
